...
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#111827"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#6B7280"
...
