...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/media_event_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Event Title"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/btn_remove_media"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/media_organizer_name"
                android:layout_width="0dp"
...
