...
        android:title="Events" />
    <item
        android:id="@+id/nav_admin_users"
        android:icon="@drawable/ic_people"
        android:title="Users" />
    <item
        android:id="@+id/nav_admin_media"
        android:icon="@drawable/ic_media"
        android:title="Media" />
    <item
        android:id="@+id/nav_admin_logs"
        android:icon="@drawable/ic_logs"
        android:title="Logs" />
...
